update lab12_file 05~08, update lab_contact 04